[package]
name = "mtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"

[dependencies.windows]
version = "0.26.0"
features = [
    "std",
    "Foundation",
    "Foundation_Collections",
    "Devices_Enumeration",
    "Storage",
    "Storage_Search"
]
